<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">
	<string name="app_name">Quick Dice Roller</string>
	<string name="app_author">Ohmnibus</string>
	<string name="picker_name">Dice Explorer</string>
	<string name="lblName">Name</string>
	<string name="hintName">Identifies the die</string>
	<string name="lblDesc">Description</string>
	<string name="hintDesc">Optional description for the die</string>
	<string name="lblIcon">Icon</string>
	<string name="lblExp">Formula</string>
	<string name="hintExp">Define the die roll, like 3d6+4</string>
	<string name="lblRangeValue">Values</string>
	<string name="lblCannotEvaluate">Cannot evaluate</string>
	<string name="lblResultText">Extended result</string>
	<string name="lblResultValue">Numeric Result</string>
	<string name="lblDiceBuilder">Dice Builder</string>
	<string name="lblDiceBuilderMsg">Compose a single type dice roll to add to the main formula.</string>
	<string name="lblCheckExpression">Check formula</string>
	<string name="lblCheckPassed">Die\'s formula is CORRECT.</string>
	<string name="lblIconPicker">Icon Picker</string>
	<string name="lblNewIconPicker">Select picture for Icon</string>
	<string name="lblDiceIconPicker">Dice icon Picker</string>
	<string name="lblBagIconPicker">Bag icon Picker</string>
	<string name="lblVariableIconPicker">Named value icon Picker</string>
	<string name="lblPercentage">Percentage modifier</string>
	<string name="lblModifier">Modifier</string>
	<string name="lblModifierBuilder">Mod Builder</string>
	<string name="lblModifierBuilderMessage">Compose a modifier.</string>
	<string name="lblVarModifierBuilderMessage">Select a Named Value.</string>
	<string name="lblPercModifierBuilderMessage">Compose a percentage modifier.</string>
	<string name="lblNeutralModifier">What\'s the meaning of a neutral modifier?</string>
	<string name="lblDuplicateModifier">This modifier already exists.</string>
	<string name="lblNameBag">Name</string>
	<string name="hintNameBag">Identifies the bag</string>
	<string name="lblDescBag">Description</string>
	<string name="hintDescBag">Optional description for the bag</string>
	<string name="lblFullBag">Create with full dice set</string>
	<string name="lblSmallBag">Create with d6 only</string>
	<string name="lblIconBag">Icon</string>
	<string name="lblMailSubject">[QDR] Suggestion</string>
	<string name="lblSendMail">Submit suggestion</string>
	<string name="lblCurrentFolder">Current folder: %1$s</string>
	<string name="lblItemHiddenFolder">Hidden folder</string>
	<string name="lblItemFolder">Folder</string>
	<string name="lblItemFile">%1$s - %2$s %3$s</string>
	<string name="lblParentFolder">Parent folder</string>
	<string name="lblSelectFile">Select file</string>
	<string name="lblSelectFolder">Select folder</string>
	<string name="lblNewFile">New file</string>
	<string name="lblImportFromRecent">Restore from recent file</string>
	<string name="lblMergeFrom">Import from&#8230;</string>
	<string name="lblImportFrom">Restore from&#8230;</string>
	<string name="lblExportTo">Save to&#8230;</string>
	<string name="lblMergeDiceDef">Import dice definitions</string>
	<string name="lblImportDiceDef">Restore dice definitions</string>
	<string name="lblExportDiceDef">Save dice definitions</string>
	<string name="lblItemMRU">%2$d dice in %1$s bags - %4$s %5$s</string>
	<string name="lblD">d</string>
	<string name="lblSelectDice">Select dice</string>
	<string name="lblSelectDiceDest">Select dice destination</string>
	<string name="lblLastPositionName">&lt;At the end&gt;</string>
	<string name="lblLastPositionDesc">&lt;Select this to move at the end&gt;</string>
	<string name="lblDragToResize">Drag to resize</string>
	<string name="lblQuality">Result quality</string>
	<string name="lblResultQualityRange">Result, quality, range</string>
	<string name="lblRangeFmt">%1$d &#8594; %2$d (%3$d)</string>
	<string name="lblNameVar">Name</string>
	<string name="hintNameVar">Identifies the value</string>
	<string name="lblDescVar">Description</string>
	<string name="hintDescVar">Optional description for the value</string>
	<string name="lblLabelVar">Label</string>
	<string name="hintLabelVar">Label to use in formulas</string>
	<string name="lblMinimum">Minimum</string>
	<string name="lblCurrent">Current</string>
	<string name="lblMaximum">Maximum</string>
	<string name="lblMin">Min</string>
	<string name="lblMax">Max</string>
	<string name="lblLabelValueVar">Label: Value (Min &#8594; Max)</string>
	<string name="lblLabelValueVarFmt">%1$s: %2$s (%3$s &#8594; %4$s)</string>
	<string name="lblDiceBags">Dice bags</string>
	<string name="lblVariable">Named value</string>
	<string name="lblVariables">Named values</string>
	<string name="lblNumberPicker">Number picker</string>
	<string name="lblSelectValue">Select a value.</string>
	<string name="lblSelectMinValue">Select the lower bound for this named value.</string>
	<string name="lblSelectMaxValue">Select the upper bound for this named value.</string>
	<string name="lblSelectVariable">Select a Named Value</string>
	<string name="lblSelectFunction">Select a Function</string>
	<string name="lblSelectVariableNone">This bag doesn\'t contain any named value.</string>
	<string name="lblCustomIconsOnly">Show custom icons only</string>
	<string name="lblSelectBags">Select bags to import</string>
	<string name="lblReplaceBags">Replace bags with same name</string>
	<string name="lblGb">Gb</string>
	<string name="lblMb">Mb</string>
	<string name="lblKb">Kb</string>
	<string name="lblB">b</string>
	<string name="lblConfirm">Confirm</string>
	<string name="lblCancel">Cancel</string>
	<string name="lblYes">Yes</string>
	<string name="lblNo">No</string>
	<string name="lblOk">OK</string>
	<string name="lblDone">Done</string>
	<string name="lblUndo">UNDO</string>
	<string-array name="mod_type_array">
		<item>@string/lblModifier</item>
		<item>@string/lblVariable</item>
		<item>@string/lblPercentage</item>
	</string-array>
	<string name="msgInitApp">Initializing app data&#8230;</string>
	<string name="msgRemoveDiceTitle">Remove die</string>
	<string name="msgRemoveDice">Are you sure to definitively remove the die \"%1$s\"?</string>
	<string name="msgClearResultsTitle">Clear results</string>
	<string name="msgClearResults">Are you sure to clear all the roll results?</string>
	<string name="msgLostChange">Leaving now you will lose pending changes. Continue?</string>
	<string name="msgMissingVar">The die requires some named values that are no longer available: \"%1$s\"\nThe die cannot be rolled until the named values are added to the dice bag. Save anyway?</string>
	<string name="msgRemoveDiceBagTitle">Remove dice bag</string>
	<string name="msgRemoveDiceBag">Are you sure to definitively remove the dice bag \"%1$s\"? It contains \"%2$d\" dice and \"%3$d\" modifiers. All those items will be lost in time, like tears in rain.</string>
	<string name="msgRemoveDiceBagNew">Are you sure to definitively remove the dice bag \"%1$s\"? It contains \"%2$d\" dice, \"%3$d\" named values and \"%4$d\" modifiers. All those items will be lost in time, like tears in rain.</string>
	<string name="msgWhatsNew">What\'s new</string>
	<string name="msgWhatsNewTitle">What\'s new in version %2$s</string>
	<string name="msgWhatsNewIntro"><![CDATA[
<br />
Want to stay up to date? <a href="http://goo.gl/UuJBSO">Become a beta tester!</a><br />
<br />]]></string>
	<string name="msgWhatsNewBody"><![CDATA[
&bull; Named Values can be added to quick modifiers bar for easy access<br />
&bull; New percentage modifiers<br />
&bull; Increased max number of bags, dice, variables, modifiers and linked results<br />
&bull; Fine tuning variable value (+1/-1 buttons)<br />
&bull; Fixed FC opening Help page on devices without a browser<br />
&bull; Fixed computation of some formulas<br />
&bull; Improved startup speed<br />
&bull; Improved random number generator<br />
&bull; Minor fix and improvements<br />
]]></string>
	<string name="msgWhatsNewOutro"><![CDATA[
<br />
<b>Please</b> send me a <a href="mailto:ohmnibus@gmail.com">mail</a> if you have any suggestion on how to improve the app or check the <a href="https://crowdin.com/project/quick-dice-roller">Crowdin project</a> to help me to improve translations.<br />]]></string>
	<string name="msgAboutTitle">About %1$s</string>
	<string name="msgAboutBody"><![CDATA[%1$s version %2$s<br />
Copyright &#169; 2012-2016 by %3$s<br />
<br />
<a href="https://crowdin.com/project/quick-dice-roller">Translations</a>: %4$s<br />
<br />
Please report bug to <a href="mailto:ohmnibus@gmail.com">ohmnibus@gmail.com</a><br />
<br />
This is a free app, however if you like it please consider to make a donation.<br />
<br />
Thanks!<br />]]></string>
	<string name="app_translators">Dani Estu (ES), Henning (DE), lorrampi (PT-BR), Magaolimpia (FR), Mazterki (DE), Mescalito (ES), patrik.siljestam (SV-SE), Renato Rasta (PT-BR), sic (FR), Skilgannon (DE), Stefania M. (ES), strawbxx (SV-SE)</string>
	<string name="msgLicenses">Licenses</string>
	<string name="lblLicense"><![CDATA[&bull; <a href="%1$s">%2$s</a> is published by %3$s under <a href="%4$s">%5$s</a>.<br />]]></string>
	<string-array name="lblLicenseLibURLs">
		<item>http://code.google.com/p/android-wheel/</item>
		<item>https://github.com/lorensiuswlt/</item>
		<item>https://github.com/romannurik/Android-SwipeToDismiss/</item>
		<item>http://nineoldandroids.com/</item>
		<item>https://code.google.com/p/google-gson/</item>
		<item>https://source.android.com/source/index.html</item>
		<item>https://github.com/commonsguy/cwac-provider</item>
	</string-array>
	<string-array name="lblLicenseLibNames">
		<item>Android wheel widget</item>
		<item>QuickAction widget</item>
		<item>Swipe to Dismiss code</item>
		<item>Nine Old Androids</item>
		<item>Google Gson</item>
		<item>Base64</item>
		<item>LegacyCompatCursorWrapper</item>
	</string-array>
	<string-array name="lblLicenseLibAuthors">
		<item>Yuri Kanivets</item>
		<item>Lorensius W. L. T.</item>
		<item>Roman Nurik</item>
		<item>Jake Wharton</item>
		<item>Google</item>
		<item>Google</item>
		<item>CommonsWare, LLC</item>
	</string-array>
	<string-array name="lblLicenseNames">
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
	</string-array>
	<string-array name="lblLicenseURLs">
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
	</string-array>
	<string name="lbl_donate_title_small">Small donation</string>
	<string name="lbl_donate_url_small">https://play.google.com/store/apps/details?id=ohm.donate.small</string>
	<string name="lbl_donate_title_medium">Medium donation</string>
	<string name="lbl_donate_url_medium">https://play.google.com/store/apps/details?id=ohm.donate.medium</string>
	<string name="lbl_donate_title_large">Generous donation</string>
	<string name="lbl_donate_url_large">https://play.google.com/store/apps/details?id=ohm.donate.large</string>
	<string name="msgRemoveModTitle">Remove modifier</string>
	<string name="msgRemoveMod">Are you sure to definitively remove the modifier \"%1$s\"?</string>
	<string name="msgBonusTitle">Bonus %1$+d</string>
	<string name="msgBonusMessage">Positive modifier of %1$+d</string>
	<string name="msgMalusTitle">Penalty %1$+d</string>
	<string name="msgOnlineHelp">Check Online Help</string>
	<string name="mnuUndoClearAllResult">Restore all results</string>
	<string name="pref_link_title">Link roll results</string>
</resources>