<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"

	android:orientation="vertical"

	android:padding="16dp"
	>
	
	<TextView style="@style/Details.Value"
		android:id="@+id/rdDescription"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblDesc"
		/>

	<TextView style="@style/Details.Label"
		android:id="@+id/rdDescriptionLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblDesc"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/separator_size"
		/>

	<TextView style="@style/Details.Value"
		android:id="@+id/rdResultText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblResultText"
		/>

	<TextView style="@style/Details.Label"
		android:id="@+id/rdResultTextLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblResultText"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/separator_size"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		
		android:orientation="horizontal"
		android:gravity="bottom"
		
		android:padding="0dp"
		>
		<TextView style="@style/Details.Value"
			android:id="@+id/rdResultValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:text="@string/lblResultValue"
			/>
		
		<ImageView
			android:id="@+id/rdResultQuality"
			android:layout_width="24dp"
			android:layout_height="match_parent"
			
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			
			android:src="@drawable/ic_res_critical"
			android:contentDescription="@string/lblB"
			/>
	
		<TextView style="@style/Details.Value"
			android:id="@+id/rdRange"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:text="@string/lblRangeValue"
			/>
	</LinearLayout>
	<TextView style="@style/Details.Label"
		android:id="@+id/rdRangeLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblResultQualityRange"
		/>
</LinearLayout>
