<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/dbiRoot"
	
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@android:drawable/title_bar" >

	<ImageView
		android:id="@+id/dbiImage"
		android:layout_width="48dp"
		android:layout_height="48dp"
		
		android:layout_alignParentLeft="true"
		android:layout_centerVertical="true"
		
		android:src="@drawable/ic_dxx_gray"
		android:contentDescription="@string/lblIconBag"
		/>
	
	<TextView style="@style/DiceBagTitle"
		android:id="@+id/dbiName"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_toRightOf="@+id/dbiImage"
		android:layout_alignParentTop="true"
		
		android:text="@string/lblNameBag"
		/>

	<TextView style="@style/DiceBagText"
		android:id="@+id/dbiDescription"
		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		android:layout_toRightOf="@+id/dbiImage"
		android:layout_below="@+id/dbiName"
		
		android:text="@string/lblDescBag"
		/>
</RelativeLayout>