<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"

	android:orientation="vertical"

	android:padding="16dp"
	>

	<TextView style="@style/Details.Value"
		android:id="@+id/lblDescription"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblDesc"
		/>

	<TextView style="@style/Details.Label"
		android:id="@+id/lblDescriptionLabel"
		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"

		android:text="@string/lblDesc"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/separator_size"
		/>
	
	<TextView style="@style/Details.Value"
		android:id="@+id/lblLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:text="@string/lblLabelValueVarFmt"
		/>

	<TextView style="@style/Details.Label"
		android:id="@+id/lblLabelLabel"
		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"

		android:text="@string/lblLabelValueVar"
		/>

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/separator_size"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		>
		<Button
			android:id="@+id/cmdDecrease"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="-"
			/>

		<View
			android:layout_width="@dimen/separator_size"
			android:layout_height="match_parent"
			/>

		<SeekBar
			android:id="@+id/sbValue"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>

		<View
			android:layout_width="@dimen/separator_size"
			android:layout_height="match_parent"
			/>

		<Button
			android:id="@+id/cmdIncrease"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="+"
			/>
	</LinearLayout>
</LinearLayout>
