<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/mProfileDrawer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<!-- The main content view -->
	<RelativeLayout style="?attr/ohmMainAppContainer"
		android:id="@+id/mRoot"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>

		<ImageView style="@style/CustomBackground"
			android:id="@+id/mCutomBackground"
			android:visibility="gone"
			/>
		
		<ImageView style="?attr/ohmLokLogoEmboss"
			android:contentDescription="@string/app_name"
			/>
		
		<ImageView style="@style/DiceBagHandle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			
			android:src="@drawable/ic_handle_bar_left"
			android:scaleType="fitXY"
			android:contentDescription="@null"
			/>
		
		<ImageView style="@style/DiceBagHandle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			
			android:src="@drawable/ic_handle_bar_right"
			android:scaleType="fitXY"
			android:contentDescription="@null"
			/>

		<RelativeLayout style="?attr/ohmLastRollContainer"
			android:id="@+id/mLastRollContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
	
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			
			android:layout_marginLeft="@dimen/drawer_margin_for_handle"
			android:layout_marginRight="@dimen/drawer_margin_for_handle"
			>
			
			<include
				android:id="@+id/mLastRoll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/mLinkButton"
				
				layout="@layout/roll_item"
				/>

			<View style="@style/LinkRoll.Divider.Vertical"
				android:layout_toLeftOf="@+id/mLinkButton"
				android:layout_centerVertical="true"
				/>
			<ImageButton style="@style/LinkRoll.Button"
				android:id="@+id/mLinkButton"
				
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"

				android:contentDescription="@string/pref_link_title"
				/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
		
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_toLeftOf="@+id/mLinkButton"
				>
				<Button 
					android:id="@+id/mUndoDeleteAll"
	
					android:layout_width="wrap_content"
					android:layout_height="48dp"
	
					android:layout_centerInParent="true"
	
					android:text="@string/mnuUndoClearAllResult"
	
					android:visibility="gone"
					/>
	
			</RelativeLayout>
		</RelativeLayout>
		
		<ohm.library.widget.SplitView
			android:id="@+id/mSplitView"
			
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/mLastRollContainer"
			android:layout_above="@+id/mModifierContainer"
			android:layout_alignWithParentIfMissing="true"
			
			android:layout_marginLeft="@dimen/drawer_margin_for_handle"
			android:layout_marginRight="@dimen/drawer_margin_for_handle"
			
			android:orientation="vertical"
			
			app:handle="@+id/mHandle"
			app:firstContent="@+id/mRollList"
			app:secondContent="@+id/mDiceSet"
			>
			
			<GridView style="?attr/ohmRollListContainer"
				android:id="@+id/mRollList"
				
				android:layout_width="fill_parent"
				android:layout_height="0dp"

				android:layout_weight="1"

				app:minSize="0dp"

				android:numColumns="1"
				/>

			<!-- <ImageView
				android:id="@+id/mHandle"
				
				android:layout_width="fill_parent"
				android:layout_height="24dp"
				
				android:background="@drawable/ic_handle_hori"
				android:contentDescription="@string/lblDragToResize"
				/> -->
			<ImageView style="?attr/ohmResizeHandleHorizontal"
				android:id="@+id/mHandle"
				
				android:src="@drawable/ic_handle_img_hori"
				android:contentDescription="@string/lblDragToResize"
				/>
			
			<GridView style="?attr/ohmDiceGridContainer"
				android:id="@+id/mDiceSet"

				android:layout_width="fill_parent"
				android:layout_height="142dp"

				app:minSize="68dp"
				>
			</GridView>
		</ohm.library.widget.SplitView>
		
		<!-- <include
			layout="@layout/inc_undo_bar"
			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:layout_alignParentLeft="true"
			android:layout_alignWithParentIfMissing="true"
			android:layout_above="@+id/mModifierContainer"
			/> -->
			
		<RelativeLayout style="?attr/ohmModifiersContainer"
			android:id="@+id/mModifierContainer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="@dimen/drawer_margin_for_handle"
			android:layout_marginRight="@dimen/drawer_margin_for_handle"
			>
			
			<HorizontalScrollView
				tools:ignore="UselessParent"
				android:id="@+id/mModifierScroller"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				>
		
				<LinearLayout
					android:id="@+id/mModifierList"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					>
		
					<ImageView
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:src="@drawable/ic_d100_blue"
						android:contentDescription="@string/lblName" />
		
					<ImageView
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:src="@drawable/ic_d100_blue"
						android:contentDescription="@string/lblName" />
				 </LinearLayout>
			</HorizontalScrollView>
		</RelativeLayout>
	</RelativeLayout>
	
	<!-- The navigation drawer -->
	<ListView style="?attr/ohmDiceBagDrawer"
		android:id="@+id/mDiceBagList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginRight="@dimen/drawer_margin_keep_clean"
		android:layout_gravity="left"
		
		android:choiceMode="singleChoice"
		/>
	
	<ListView style="?attr/ohmVariableDrawer"
		android:id="@+id/mVariableList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="@dimen/drawer_margin_keep_clean"
		android:layout_gravity="right"
		/>
</android.support.v4.widget.DrawerLayout>